--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- <body id="" style="background-color: lightblue;"> -->
   <body id="gradient">
     <div class="card">
+      <div class="inside-card">
            <div class="colums row align-center inside">
                 <img class="float-center small-3 medium-3 large-2 main-logo" src="img/deltav_white.svg">
             </div>
@@ -19,18 +20,18 @@
               <h1 class="text-center">Valerie Sharp</h1>
             </div>
             <div class="row align-center">
-              <h3 class="text-center ">Creater of Delta<span class="deltav-v">V</span> Industry</h3>
+              <h3 class="text-center ">Creator of Delta<span class="deltav-v">V</span> Industries</h3>
             </div>
             <div class="row align-center text-center">
               <!-- <div class="col-lg-12 col-mg-12 col-sm-12 container sub-icons"> -->
               <a class="direct-contact" href="mailto:valerie.n.sharp93@gmail.com"> <img class="small-1 contact-icons email" src="img/email.png">Contact Me</img></a>
               <a class="direct-contact" href=""><img class="small-1 contact-icons resume" src="img/resume.png">View resume</img></a>
             </div>
-
+        </div>
     </div>
             <div class="  text-center bottom-nav-bar">
-              <a class="large-6 medium-6 small-6" href=""><h4>Ux/Ui Developer</h4></a>
-              <a class="large-6 medium-6 small-6 " href=""><h4>Front End Devloper</h4></a>                
+              <a class="large-6 medium-6 small-6 ux-dev" href=""><h4>Ux/Ui Developer</h4></a>
+              <a class="large-6 medium-6 small-6 front-end" href=""><h4>Front End Devloper</h4></a>                
             </div>
 <!-- End content -->
     <script src="js/vendor/jquery.min.js"></script>
